# SmartMedicalProject

./: .gitignore  patientclient1  smart_clinic.sql  smart_clinic_8_31.sql
PatientClient/: Aidialog.h  CMakeLists.txt  billsdialog.cpp  billsdialog.h  billsdialog.ui  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatmessagewidget.cpp  chatmessagewidget.h  chatmessagewidget.ui  doctordetailsdialog.cpp  doctordetailsdialog.h  doctordetailsdialog.ui  doctorselectiondialog.cpp  doctorselectiondialog.h  doctorselectiondialog.ui  emrdialog.cpp  emrdialog.h  emrdialog.ui  healthcheckindialog.cpp  healthcheckindialog.h  healthcheckindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  media.qrc  myappointmentsdialog.cpp  myappointmentsdialog.h  patientclient.qrc  patientinfodialog.cpp  patientinfodialog.h  patientinfodialog.ui  paymentdialog.cpp  paymentdialog.h  relaxationdialog.cpp  relaxationdialog.h  relaxationdialog.ui  (+3 more)
PatientClient/PatientClient/: Aidialog.cpp  CMakeLists.txt  billsdialog.cpp  chatdialog.cpp  emrdialog.cpp  main.cpp  mainwindow.cpp  mainwindow.h  paymentdialog.ui
PatientClient1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  myappointmentsdialog.cpp  myappointmentsdialog.ui
build-PatientClient-Desktop_Qt_5_12_8_GCC_64bit-Debug/: CMakeCache.txt  Makefile  PatientClient  PatientClient.cbp  cmake_install.cmake  patientclient.qrc.depends  qrc_patientclient.cpp
build-PatientClient-Desktop_Qt_5_12_8_GCC_64bit-Debug/PatientClient_autogen/: mocs_compilation.cpp
build-PatientClient-Desktop_Qt_5_12_8_GCC_64bit-Debug/PatientClient_autogen/EWIEGA46WW/: moc_billsdialog.cpp  moc_chatdialog.cpp  moc_chatmessagewidget.cpp  moc_doctordetailsdialog.cpp  moc_doctorselectiondialog.cpp  moc_emrdialog.cpp  moc_mainwindow.cpp  moc_myappointmentsdialog.cpp  moc_patientinfodialog.cpp  moc_paymentdialog.cpp  moc_timeselectiondialog.cpp
build-PatientClient-Desktop_Qt_5_12_8_GCC_64bit-Debug/PatientClient_autogen/include/: ui_billsdialog.h  ui_chatdialog.h  ui_chatmessagewidget.h  ui_doctordetailsdialog.h  ui_doctorselectiondialog.h  ui_emrdialog.h  ui_mainwindow.h  ui_myappointmentsdialog.h  ui_patientinfodialog.h  ui_paymentdialog.h  ui_timeselectiondialog.h
